@@ -1,4 +1,4 @@
-.\" $Id: ares_free_string.3,v 1.2 2004-02-04 07:50:18 bagder Exp $
+.\" $Id: ares_free_string.3,v 1.3 2004-03-30 09:06:42 bagder Exp $
 .\"
 .\" Copyright 2000 by the Massachusetts Institute of Technology.
 .\"
@@ -26,11 +26,10 @@ ares_free_string \- Free strings allocated by ares functions
 .SH DESCRIPTION
 The
 .I ares_free_string
-function frees a string allocated by the
-.I ares_mkquery
-function.
+function frees a string allocated by an ares function.
 .SH SEE ALSO
 .BR ares_mkquery (3)
+.BR ares_expand_string (3)
 .SH AUTHOR
 Greg Hudson, MIT Information Systems
 .br
