@@ -36,6 +36,8 @@ const char *ares_strerror(int code)
     "End of file",
     "Error reading file",
     "Out of memory"
+    "Channel is being destroyed",
+    "Misformatted string"
   };
 
   assert(code >= 0 && code < (int)(sizeof(errtext) / sizeof(*errtext)));
